@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2012-02-14 (SVN):
+    * gl_draw.c, menu.c, gl_rmisc.c, draw.c: Reverted an old patch about
+      how multiplayer menu player setup pictures are drawn.
+
+2012-02-14 (SVN):
     * gl_vidnt.c, gl_vidsdl.c: Cleaned up VID_Init, VID_ChangeConsize and
       VID_ConWidth where we set the conwidth. Allowed conwidth settings
       even as low as 320.
